<resources>
    <string name="app_name">Mealano</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="plans">Plans</string>
    <string name="meal_details">Meal Details</string>
    <string name="about">About</string>
    <string name="first_onboading_title">No Ideas, No Problem</string>
    <string name="first_onboarding_description">Mealano suggests a meal for you so you don\'t get confused by the Question (what to eat Today)</string>
    <string name="next">Next</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back</string>
    <string name="login_description">use the email and password you enterd while\nregisteration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_login_using">Or Login using</string>
    <string name="don_t_have_account">Don\'t have Account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">already have Account?</string>
    <string name="or_signup_using">Or Signup using</string>
    <string name="signup_description">enter email and password to let us know you</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="signup_successfully">Signup Successfully</string>
    <string name="signout">Signout</string>
    <string name="some_error_happend_while_logging_you_in_please_check_your_internet_connection_and_try_again">some error happend while logging you in. please check your internet connection and try again</string>
    <string name="error_happened">Error Happened</string>
    <string name="second_onboarding_title">Explore Meals From All over the World</string>
    <string name="second_onboarding_description">Mealano provides you a search for meals all over the world by the Ingredient, Area or Category</string>
    <string name="third_onboarding_title">Save your Favorite Meals, Plan your Week</string>
    <string name="third_onboarding_description">you can save your favorite meals so you can review them any time or add a meal to your weekly plan and share it with you mobile calendar</string>
    <string name="finish">Finish</string>
    <string name="popular_meals">Popular Meals</string>
    <string name="today_s_random_meal">Today\'s Meal</string>
    <string name="refresh">Refresh</string>
    <string name="add_to_plan">Add To Plan</string>
    <string name="tags">Tags</string>
    <string name="category">Category:</string>
    <string name="area">Area:</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients_and_measurments">Ingredients and Measurments</string>
    <string name="youtube_viedo">Youtube Viedo</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="client_id">110969076776-thpopm1qmvkfgag77g6oac4is4fis0qj.apps.googleusercontent.com</string>
    <string name="category_in_search">Category</string>
    <string name="area_in_search">Area</string>
    <string name="ingredient_in_search">Ingredient</string>
    <string name="search_by">Search By</string>
    <string name="no_favorite_meals_yet">No Favorite Meals Yet</string>
    <string name="no_plans_yet">No Plans Yet</string>
    <string name="select_a_date">Select a Date</string>
    <string name="about_mealano">About Mealano</string>
    <string name="linkedin">Linkedin</string>
    <string name="github">Github</string>
    <string name="dev_title">Native Android Developer</string>
    <string name="dev_name">Abdelrahman Ahmed Hamdy</string>
    <string name="project_description">Mealano is the first Android
        application to build during my 9 Months Journey at ITI,
        Mealano was built using java. Huge thanks for All my instructors
        (Ahmed Mazen, Heba Ismail, Mohammed Galal and Eng.Hager)
        and special thanks for all my Colleges who helped me during this project.
        finally I hope you like this application and enjoy using it. \n\n
        you can contact me via linkedin.\n
        source code is available on Github\n\n

        Thank you for reading, Enjoy Mealano.
    </string>
    <string name="put_at_least_6_characters">put at least 6 characters</string>
    <string name="you_arn_t_authorized_n_login_to_open_this_feature">You Arn\'t Authorized!!\n Login to open this feature</string>
    <string name="internet_is_lost_turn_wifi_on">Internet is lost, Turn Wifi On</string>
</resources>