<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/outline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/outline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/outline_favorite_border_24"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/plansFragment"
        android:icon="@drawable/lightbulb_24px"
        android:title="@string/plans"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/outline_person_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>