<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="io.github.boodyahmedhamdy.mealano.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/signupFragment"
        android:name="io.github.boodyahmedhamdy.mealano.signup.SignupFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/action_signupFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_signupFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="io.github.boodyahmedhamdy.mealano.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_mealDetailsFragment"
            app:destination="@id/mealDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="io.github.boodyahmedhamdy.mealano.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_mealDetailsFragment"
            app:destination="@id/mealDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="io.github.boodyahmedhamdy.mealano.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_favoriteFragment_to_mealDetailsFragment"
            app:destination="@id/mealDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="io.github.boodyahmedhamdy.mealano.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/plansFragment"
        android:name="io.github.boodyahmedhamdy.mealano.plans.PlansFragment"
        android:label="@string/plans"
        tools:layout="@layout/fragment_plans">
        <action
            android:id="@+id/action_plansFragment_to_mealDetailsFragment"
            app:destination="@id/mealDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/mealDetailsFragment"
        android:name="io.github.boodyahmedhamdy.mealano.details.MealDetailsFragment"
        android:label="@string/meal_details"
        tools:layout="@layout/fragment_meal_details" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="io.github.boodyahmedhamdy.mealano.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/splashFragment"
        android:name="io.github.boodyahmedhamdy.mealano.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_onBoardingFragment"
            app:destination="@id/onBoardingFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/onBoardingFirstFragment"
        android:name="io.github.boodyahmedhamdy.mealano.onboarding.OnBoardingFirstFragment"
        android:label="fragment_on_boarding_first"
        tools:layout="@layout/fragment_on_boarding_first" />
    <fragment
        android:id="@+id/onBoardingSecondFragment"
        android:name="io.github.boodyahmedhamdy.mealano.onboarding.OnBoardingSecondFragment"
        android:label="fragment_on_boarding_second"
        tools:layout="@layout/fragment_on_boarding_second" />
    <fragment
        android:id="@+id/onBoardingThirdFragment"
        android:name="io.github.boodyahmedhamdy.mealano.onboarding.OnBoardingThirdFragment"
        android:label="fragment_on_boarding_third"
        tools:layout="@layout/fragment_on_boarding_third" />
    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="io.github.boodyahmedhamdy.mealano.onboarding.OnBoardingFragment"
        android:label="fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding" >
        <action
            android:id="@+id/action_onBoardingFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/onBoardingFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>